# cs-259-21f

dse-project/mcc_common/: mcc_common.mk
dse-project/polybench/linear-algebra/kernels/2mm/xilinx_dse/: Makefile
dse-project/polybench/set1/3mm/xilinx_dse/3mm/: 3mm.c  ds_info.json
dse-project/polybench/set1/atax/xilinx_dse/: Makefile
dse-project/polybench/set1/atax/xilinx_dse/atax/: atax.c  atax.h  ds_info.json  orig_atax.c
dse-project/polybench/set1/gemver/xilinx_dse/: Makefile
dse-project/polybench/set1/gemver/xilinx_dse/gemver/: ds_info.json  gemver.c  gemver.h  orig_gemver.c
dse-project/polybench/set1/gesummv/xilinx_dse/gesummv/: ds_info.json  gesummv.c  gesummv.h
dse-project/polybench/set1/heat-3d/xilinx_dse/: Makefile
dse-project/polybench/set1/heat-3d/xilinx_dse/heat-3d/: ds_info.json  heat-3d.c  heat-3d.h  orig_heat-3d.c
dse-project/polybench/set1/jacobi-2d/xilinx_dse/: Makefile
dse-project/polybench/set1/jacobi-2d/xilinx_dse/jacobi-2d/: ds_info.json  jacobi-2d.c  jacobi-2d.h  orig_jacobi-2d.c
dse-project/polybench/set2/2mm/xilinx_dse/: Makefile
dse-project/polybench/set2/2mm/xilinx_dse/2mm/: 2mm.c
dse-project/polybench/set2/bicg/xilinx_dse/: Makefile
dse-project/polybench/set2/bicg/xilinx_dse/bicg/: bicg.h  orig_bicg.c
dse-project/polybench/set2/covariance/xilinx_dse/: Makefile
dse-project/polybench/set2/covariance/xilinx_dse/covariance/: covariance.h  orig_covariance.c
dse-project/polybench/set2/fdtd-2d/xilinx_dse/: Makefile
dse-project/polybench/set2/fdtd-2d/xilinx_dse/fdtd-2d/: fdtd-2d.h  orig_fdtd-2d.c
dse-project/polybench/set2/gemm/xilinx_dse/: Makefile
dse-project/polybench/set2/jacobi-1d/xilinx_dse/: Makefile
dse-project/polybench/set3/3mm-medium/xilinx_dse/: Makefile
dse-project/polybench/set3/adi/xilinx_dse/: Makefile
dse-project/polybench/set3/doitgen/xilinx_dse/: Makefile
dse-project/polybench/set3/gesummv-small/xilinx_dse/: Makefile
dse-project/polybench/set3/mvt/xilinx_dse/: Makefile
dse-project/polybench/set3/seidel-2d/xilinx_dse/: Makefile
dse-project/polybench/utilities/: polybench.h
graph/: README.md
graph/bfs/: CMakeLists.txt  bfs-host.cpp  bfs.cpp  bfs.h  hls.tcl
graph/gnn/: CMakeLists.txt  edge_index.txt  gnn-host.cpp  gnn.cpp  gnn.h  result.txt  weight_conv1.txt
lab1/: Makefile
lab1/src/: dot_prod_host.cpp  dot_prod_kernel.cpp
lab2/: cnn.cpp  cnn.h  emconfig.json  main.cpp  makefile  opencl.cpp  params.sh  xilinx.cpp
tutorial/: rpt_comp.tcl  rpt_vadd.tcl  run_hls.tcl  vadd_cmp_step3.cpp  vadd_dataflow.cpp  vadd_doublebuffer.cpp  vadd_mem_step2.cpp
vadd/: Makefile
vadd/src/: vadd_host.cpp  vadd_kernel.cpp
vadd_example/: vadd_lcs_step1.cpp
(+33 files in other folders)
